# MikoStorm

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README-build.md  README.mcp  README.md  RESTART_AND_RELOG.md  autobuild.xml  build command  build.bat  rebuild.bat  version  voicebox-eigener-audiokanal.md
doc/: build-options.md  building_linux.md  building_macos.md  building_windows.md  experimental_features.md  music_player_plan.md  plan_im_encryption.md
flatpak/: de.ddynamicevolution.MikoStorm.json
flatpak/assets/: de.ddynamicevolution.MikoStorm.desktop  de.ddynamicevolution.MikoStorm.metainfo.xml  mikostorm-viewer
indra/: CMakeLists.txt
indra/cmake/: BuildVersion.cmake  CMakeLists.txt  Copy3rdPartyLibs.cmake  ESPEAK_NG.cmake  OPENAL.cmake  Variables.cmake  ViewerMiscLibs.cmake
indra/lib/python/indra/util/: llmanifest.py
indra/llaudio/: CMakeLists.txt  fmod_codec_ogg.cpp  fmod_codec_ogg.h  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  llfftconvolver.cpp  llfftconvolver.h  llirloader.cpp  llirloader.h  lllitehrtfdsp.cpp  lllitehrtfdsp.h  llmediaaudiostream.cpp  llmediaaudiostream.h  llmetadatatags.cpp  llmetadatatags.h  llpositionalstream.cpp  llpositionalstream.h  llpositionalstreammulti.cpp  llpositionalstreammulti.h  llpositionalstreamstereo.cpp  llpositionalstreamstereo.h  llstereoupmix.cpp  llstereoupmix.h  llstream3durlresolve.cpp  llstream3durlresolve.h  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvenuereverbdsp.cpp  llvenuereverbdsp.h
indra/llcommon/: CMakeLists.txt  indra_constants.h  llerror.cpp  llpluginaudio.h  pvextras.cpp  pvextras.h
indra/llcrashlogger/: llcrashlogger.cpp
indra/llfilesystem/: lldir_mac.cpp
indra/llplugin/: llpluginclassmedia.cpp  llpluginclassmedia.h
indra/llrender/: llshadermgr.cpp  llshadermgr.h
indra/llreshade/: CMakeLists.txt  dll_resources.cpp  input_windows_mikostorm.cpp  mikostorm_reshade_adapter.cpp  mikostorm_reshade_adapter.hpp  runtime.cpp  runtime_gui.cpp  state_block.cpp  version.h
indra/llreshade/opengl/: opengl_impl_device.cpp
indra/llui/: llchat.h  llfloater.cpp  llfloater.h  lltabcontainer.h  lltextbase.cpp  lltransutil.cpp  llui.cpp  llui.h  llurlmatch.cpp  llurlmatch.h  llurlregistry.cpp  llurlregistry.h
indra/llwindow/: llwindow.cpp  llwindow.h  llwindowheadless.h  llwindowmacosx.cpp  llwindowmacosx.h  llwindowmesaheadless.h  llwindowsdl.cpp  llwindowsdl.h  llwindowsdl2.cpp  llwindowsdl2.h  llwindowwin32.cpp  llwindowwin32.h
indra/media_plugins/gstreamer010/: llmediaimplgstreamervidplug.cpp
indra/newview/: CMakeLists.txt  Firestorm.xib  NACLfloaterexploresounds.cpp  NACLfloaterexploresounds.h  VIEWER_VERSION_FS.txt  animationexplorer.cpp  animationexplorer.h  animationspeed.cpp  animationspeed.h  aoengine.cpp  desktopnotifierlinux.cpp  floater_hwspoof.cpp  floater_hwspoof.h  fs_viewer_manifest.py  fschattts.cpp  fschattts.h  fscontactsfriendsmenu.cpp  fscontactsfriendsmenu.h  fsexportperms.cpp  fsfloaterim.cpp  fsfloaterim.h  fsfloaterimsetsound.cpp  fsfloaterimsetsound.h  fsfloaterloginimagesettings.cpp  fsfloaterloginimagesettings.h  fsfloaternearbychat.cpp  fsfloaternearbychat.h  fsfloaterposer.cpp  fsfloaterposer.h  fsgridhandler.cpp  fsimcipher.cpp  fsimcipher.h  fsmaniprotatejoint.cpp  fspanellogin.cpp  fspanellogin.h  fspanelprefs.cpp  fsprimfeedconnect.h  fsrestartavoid.cpp  fsrestartavoid.h  growlmanager.cpp  (+96 more)
indra/newview/English.lproj/: InfoPlist.strings
indra/newview/app_settings/: cmd_line.xml  commands.xml  quick_preferences.xml  settings.xml  settings_cinematic_bd.xml  settings_firestorm.xml  settings_hybrid.xml  settings_per_account.xml  settings_phoenix.xml  settings_text.xml  settings_v3.xml
indra/newview/app_settings/shaders/class1/deferred/: postDeferredHQDoFF.glsl  postDeferredTonemap.glsl
indra/newview/gltf/: buffer_util.h  primitive.cpp
indra/newview/icons/private/: firestorm_icon.icns
indra/newview/icons/private-os/: firestorm_icon.icns
indra/newview/installers/linux/: firestorm.desktop  mikostorm.desktop
indra/newview/installers/windows/: installer_template.nsi  lang_de.nsi
indra/newview/linux_tools/: client-readme.txt  handle_secondlifeprotocol.sh  install.sh  refresh_desktop_app_entry.sh  wrapper.sh
indra/newview/res/: viewerRes.rc
indra/newview/skins/: skins.xml
indra/newview/skins/ansastorm/textures/: textures.xml
indra/newview/skins/default/: colors.xml  toolbars.xml
indra/newview/skins/default/textures/: textures.xml
indra/newview/skins/default/xui/az/: floater_about.xml  floater_preferences.xml  menu_login.xml  menu_viewer.xml  notifications.xml  panel_main_inventory.xml  panel_preferences_UI.xml  panel_preferences_advanced.xml  panel_preferences_alerts.xml  panel_preferences_chat.xml  panel_preferences_colors.xml  panel_preferences_firestorm.xml  panel_preferences_graphics1.xml  panel_preferences_sound.xml  panel_snapshot_options.xml  strings.xml
indra/newview/skins/default/xui/da/: floater_about.xml  menu_viewer.xml  notifications.xml  panel_preferences_colors.xml
indra/newview/skins/default/xui/de/: floater_about.xml  floater_animationspeed.xml  floater_camera_timeline.xml  floater_fs_im_session.xml  floater_fs_poser.xml  floater_preferences.xml  floater_rlv_strings.xml  menu_login.xml  menu_viewer.xml  notifications.xml  panel_preferences_UI.xml  panel_preferences_alerts.xml  (+10 more)
indra/newview/skins/firestorm/: colors.xml
indra/newview/skins/metaharper/: toolbars.xml
indra/newview/skins/mikostorm/: colors.xml
indra/newview/skins/mikostorm/textures/: flyout_btn_left.tga  flyout_btn_left_disabled.tga  flyout_btn_left_selected.tga  flyout_btn_right.tga  flyout_btn_right_disabled.tga  flyout_btn_right_selected.tga  tabarea.tga  textures.xml
indra/newview/skins/starlight/textures/: textures.xml
indra/newview/skins/starlightcui/textures/: textures.xml
indra/newview/skins/vintage/textures/: textures.xml
indra/newview/tests/: lllogininstance_test.cpp
newview/: fsversionvalues.h  viewer_version.txt
scripts/: configure_firestorm.sh
(+207 files in other folders)
